Job files added

--- a/assignment-2/drashi_assignment_2.ipynb
+++ b/assignment-2/drashi_assignment_2.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -42,21 +42,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Defaulting to user installation because normal site-packages is not writeable\n",
-      "Requirement already satisfied: pypdf in /Users/drashi/Library/Python/3.9/lib/python/site-packages (5.0.1)\n",
-      "Requirement already satisfied: typing_extensions>=4.0 in /Users/drashi/Library/Python/3.9/lib/python/site-packages (from pypdf) (4.12.2)\n",
-      "\u001b[33mWARNING: You are using pip version 21.2.4; however, version 24.2 is available.\n",
-      "You should consider upgrading via the '/Library/Developer/CommandLineTools/usr/bin/python3 -m pip install --upgrade pip' command.\u001b[0m\n"
+      "Requirement already satisfied: pypdf in /Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages (5.0.1)\n"
      ]
     }
    ],
    "source": [
-    "!pip3 install pypdf"
+    "!pip install pypdf"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "id": "Z8NtctAjMXQR"
    },
@@ -74,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {
     "id": "udSfnKlUMhCE"
    },
@@ -105,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {
     "id": "Um11fTvgN6S1"
    },
@@ -120,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -145,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -159,24 +155,14 @@
      "output_type": "stream",
      "text": [
       "Defaulting to user installation because normal site-packages is not writeable\n",
-      "Collecting mrjob\n",
-      "  Downloading mrjob-0.7.4-py2.py3-none-any.whl (439 kB)\n",
-      "\u001b[K     |████████████████████████████████| 439 kB 8.8 MB/s eta 0:00:01\n",
-      "\u001b[?25hCollecting pyenchant\n",
-      "  Downloading pyenchant-3.2.2-py3-none-any.whl (55 kB)\n",
-      "\u001b[K     |████████████████████████████████| 55 kB 12.0 MB/s eta 0:00:01\n",
-      "\u001b[?25hCollecting PyYAML>=3.10\n",
-      "  Downloading PyYAML-6.0.2-cp39-cp39-macosx_11_0_arm64.whl (172 kB)\n",
-      "\u001b[K     |████████████████████████████████| 172 kB 23.4 MB/s eta 0:00:01\n",
-      "\u001b[?25hInstalling collected packages: PyYAML, pyenchant, mrjob\n",
-      "Successfully installed PyYAML-6.0.2 mrjob-0.7.4 pyenchant-3.2.2\n",
-      "\u001b[33mWARNING: You are using pip version 21.2.4; however, version 24.2 is available.\n",
-      "You should consider upgrading via the '/Library/Developer/CommandLineTools/usr/bin/python3 -m pip install --upgrade pip' command.\u001b[0m\n"
+      "Requirement already satisfied: mrjob in /Users/drashi/Library/Python/3.12/lib/python/site-packages (0.7.4)\n",
+      "Requirement already satisfied: pyenchant in /Users/drashi/Library/Python/3.12/lib/python/site-packages (3.2.2)\n",
+      "Requirement already satisfied: PyYAML>=3.10 in /Users/drashi/Library/Python/3.12/lib/python/site-packages (from mrjob) (6.0.2)\n"
      ]
     }
    ],
    "source": [
-    "!pip3 install mrjob pyenchant"
+    "!python -m pip install mrjob pyenchant"
    ]
   },
   {
@@ -197,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -246,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {
     "id": "WnvDK0tR0b1x"
    },
@@ -257,11 +243,11 @@
      "text": [
       "No configs found; falling back on auto-configuration\n",
       "No configs specified for inline runner\n",
-      "Creating temp directory /var/folders/t7/042v1y015bl6hfs4h8xjqgqr0000gn/T/count_words.drashi.20241003.230457.894507\n",
+      "Creating temp directory /var/folders/t7/042v1y015bl6hfs4h8xjqgqr0000gn/T/count_words.drashi.20241004.001151.340740\n",
       "Running step 1 of 1...\n",
-      "job output is in /var/folders/t7/042v1y015bl6hfs4h8xjqgqr0000gn/T/count_words.drashi.20241003.230457.894507/output\n",
-      "Streaming final output from /var/folders/t7/042v1y015bl6hfs4h8xjqgqr0000gn/T/count_words.drashi.20241003.230457.894507/output...\n",
-      "Removing temp directory /var/folders/t7/042v1y015bl6hfs4h8xjqgqr0000gn/T/count_words.drashi.20241003.230457.894507...\n"
+      "job output is in /var/folders/t7/042v1y015bl6hfs4h8xjqgqr0000gn/T/count_words.drashi.20241004.001151.340740/output\n",
+      "Streaming final output from /var/folders/t7/042v1y015bl6hfs4h8xjqgqr0000gn/T/count_words.drashi.20241004.001151.340740/output...\n",
+      "Removing temp directory /var/folders/t7/042v1y015bl6hfs4h8xjqgqr0000gn/T/count_words.drashi.20241004.001151.340740...\n"
      ]
     }
    ],
@@ -285,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -336,29 +322,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Traceback (most recent call last):\n",
-      "  File \"/Users/drashi/Documents/GitHub/DATA-603/assignment-2/invalid_word_frequency_analyzer.py\", line 3, in <module>\n",
-      "    import enchant\n",
-      "  File \"/Users/drashi/Library/Python/3.9/lib/python/site-packages/enchant/__init__.py\", line 81, in <module>\n",
-      "    from enchant import _enchant as _e\n",
-      "  File \"/Users/drashi/Library/Python/3.9/lib/python/site-packages/enchant/_enchant.py\", line 157, in <module>\n",
-      "    raise ImportError(msg)\n",
-      "ImportError: The 'enchant' C library was not found and maybe needs to be installed.\n",
-      "See  https://pyenchant.github.io/pyenchant/install.html\n",
-      "for details\n",
-      "\n"
+      "No configs found; falling back on auto-configuration\n",
+      "No configs specified for inline runner\n",
+      "Creating temp directory /var/folders/t7/042v1y015bl6hfs4h8xjqgqr0000gn/T/invalid_word_frequency_analyzer.drashi.20241004.001152.178180\n",
+      "Running step 1 of 1...\n",
+      "job output is in /var/folders/t7/042v1y015bl6hfs4h8xjqgqr0000gn/T/invalid_word_frequency_analyzer.drashi.20241004.001152.178180/output\n",
+      "Streaming final output from /var/folders/t7/042v1y015bl6hfs4h8xjqgqr0000gn/T/invalid_word_frequency_analyzer.drashi.20241004.001152.178180/output...\n",
+      "Removing temp directory /var/folders/t7/042v1y015bl6hfs4h8xjqgqr0000gn/T/invalid_word_frequency_analyzer.drashi.20241004.001152.178180...\n"
      ]
     }
    ],
    "source": [
-    "!python3 invalid_word_frequency_analyzer.py file2.txt > file2_output.txt"
+    "!python invalid_word_frequency_analyzer.py file2.txt > file2_output.txt"
    ]
   }
  ],
